--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,5 +19,7 @@
     "express": "^4.16.4",
     "joi": "^14.3.1",
     "mongoose": "^5.4.19"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
