--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "homepage": "https://github.com/SE-GUC/EL-Fatyat-el-kharqat-ft.-Eyad-Ghallab#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "concurrently": "^4.1.0",
     "express": "^4.16.4",
     "joi": "^14.3.1",
     "mongoose": "^5.4.19"
