--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
   },
   "homepage": "https://github.com/SE-GUC/EL-Fatyat-el-kharqat-ft.-Eyad-Ghallab#readme",
   "dependencies": {
+    "body": "^5.1.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "joi": "^14.3.1",
-    "mongoose": "^5.4.19"
+    "mongoose": "^5.4.19",
+    "parser": "^0.1.4"
   },
-
- "devDependencies": {},
-
+  "devDependencies": {},
   "description": ""
 }
