--- a/package.json
+++ b/package.json
@@ -16,25 +16,14 @@
   },
   "homepage": "https://github.com/SE-GUC/EL-Fatyat-el-kharqat-ft.-Eyad-Ghallab#readme",
   "dependencies": {
+    "body": "^5.1.0",
     "body-parser": "^1.18.3",
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
     "concurrently": "^4.1.0",
->>>>>>> Admin
-=======
-    "concurrently": "^4.1.0",
->>>>>>> SPC
     "express": "^4.16.4",
     "joi": "^14.3.1",
-    "mongoose": "^5.4.19"
+    "mongoose": "^5.4.19",
+    "parser": "^0.1.4"
   },
-<<<<<<< HEAD
-
- "devDependencies": {},
-
-=======
   "devDependencies": {},
->>>>>>> SPC
   "description": ""
 }
