--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index",
+    "dev": "nodemon index",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -16,12 +18,18 @@
   },
   "homepage": "https://github.com/SE-GUC/EL-Fatyat-el-kharqat-ft.-Eyad-Ghallab#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
+    "jest": "^24.5.0",
     "joi": "^14.3.1",
-    "mongoose": "^5.4.20"
+    "mongoose": "^5.4.20",
+    "nodemon": "^1.18.10"
   },
-  "devDependencies": {},
-  "description": ""
+  "devDependencies": {
+    "jest": "^24.1.0",
+    "nodemon": "^1.18.10"
+  }
 }
