--- a/package.json
+++ b/package.json
@@ -1,100 +1,26 @@
 {
-
   "name": "el-fatyat-el-kharqat-ft.-eyad-ghallab",
-
-  "name": "express-test",
-
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-
-//    "test": "jest"
-
-
-
-
     "start": "node index",
     "dev": "nodemon index",
     "test": "jest"
-
-
-
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/SE-GUC/EL-Fatyat-el-kharqat-ft.-Eyad-Ghallab.git"
-
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-
     "axios": "^0.18.0",
-    "body-parser": "^1.18.3",
-    "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "i": "^0.3.6",
-    "install": "^0.12.2",
-    "jest": "^24.1.0",
-    "joi": "^14.3.1",
-    "mongoose": "^5.4.19",
-    "nodemon": "^1.18.10"
-  
-
-
-
-    "axios": "^0.18.0",
-    "body-parser": "^1.18.3",
-
-
-
-   // "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-
-
-    "concurrently": "^4.1.0",
-
-
-    "body": "^5.1.0",
-
-   // "axios": "^0.18.0",
-    //"bcryptjs": "^2.4.3",
-
-  //  "body-parser": "^1.18.3",
-
-  //  "concurrently": "^4.1.0",
-
-
-  //  "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
-    "jest": "^24.5.0",
     "joi": "^14.3.1",
-
-    "mongoose": "^5.4.20"
-   // "mongoose": "^5.4.20",
-   // "nodemon": "^1.18.10"
-  },
-  "devDependencies": {
-    "jest": "^24.1.0",
-    "nodemon": "^1.18.10"
-  }
-
-    //"concurrently": "^4.1.0",
-
-   // "cors": "^2.8.5",
-
-
-    "express": "^4.16.4",
-    "express-jwt": "^5.3.1",
-   // "jest": "^24.5.0",
-   // "joi": "^14.3.1",
-
     "jsonwebtoken": "^8.5.0",
     "moment": "^2.24.0",
-  //  "mongoose": "^5.4.15",
+    "mongoose": "^5.4.15",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0"
   },
@@ -102,28 +28,4 @@
     "jest": "^24.1.0",
     "nodemon": "^1.18.10"
   }
-  "parser": "^0.1.4"
-
-  
-    "jsonwebtoken": "^8.5.1",
-    "jwt-simple": "^0.5.5",
-    "moment": "^2.24.0",
-    "mongoose": "^5.4.19",
-    "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0"
-
-  },
-
- 
-
-
-  "devDependencies": {},
-
-
-
-  "description": ""
-
-
-
 }
-
