--- a/client/.gitignore
+++ b/client/.gitignore
@@ -17,6 +17,10 @@
 .env.development.local
 .env.test.local
 .env.production.local
+node_modules/
+package-lock.json
+.DS_Store
+
 
 npm-debug.log*
 yarn-debug.log*
