--- a/client/package.json
+++ b/client/package.json
@@ -3,19 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "connected-react-router": "^6.3.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
-    "react-select": "^2.4.2",
-
-    
-    "connected-react-router": "^6.3.2",
-    
-    "react-router": "^5.0.0"
-    
+    "react-select": "^2.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
