--- a/Server/package.json
+++ b/Server/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.0",
     "moment": "^2.24.0",
     "mongoose": "^5.4.22",
+    "multer": "^1.4.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0"
   },
