--- a/Server/package.json
+++ b/Server/package.json
@@ -26,6 +26,7 @@
     "nexmo": "^2.4.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "reactjs-popup": "^1.3.2",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
