--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-select": "^2.4.2",
+    "reactjs-popup": "^1.3.2",
     "socket.io": "^2.2.0"
   },
   "scripts": {
