--- a/Server/package.json
+++ b/Server/package.json
@@ -19,11 +19,13 @@
     "dotenv": "^7.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "gridfs-stream": "^1.1.1",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.0",
     "moment": "^2.24.0",
     "mongoose": "^5.4.22",
     "multer": "^1.4.1",
+    "multer-gridfs-storage": "^3.2.3",
     "nexmo": "^2.4.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
